Transform project to Pharmique coming soon page with dark green gradient background

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pharmique-soon-page",
-  "description": "Build a personal website, blog, or portfolio with Astro.",
+  "description": "Pharmique Coming Soon Page",
   "cloudflare": {
     "label": "Astro Framework Starter",
     "products": [
@@ -15,9 +15,6 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "12.6.0",
-    "@astrojs/mdx": "4.3.0",
-    "@astrojs/rss": "4.0.11",
-    "@astrojs/sitemap": "3.4.1",
     "astro": "5.10.1",
     "typescript": "5.8.3"
   },
